Add ability to populate env from secret & various bugfixes (#194)
* Add extraEnvSecret

* Fix spacing

* Fix intendation ( copilot :facepalm: )

* Update to match new release

* Update Chart.yaml

* Fix typo in compiler statefulset

There is no readinessProbePeScheme, probably leftover when copy+pasting. Fixing to readinessProbeScheme.

* Add good base for PuppetDB JAVA env

* Update CHANGELOG.md

* Remove deprecated flag from PUPPETDB_JAVA_ARGS

* Fix statefulset cmd and standardize readinessProbe

* Update the changelog to reflect r10k changes

* Add myself to maintainers list & codeowners

* Update CHANGELOG.md

* Update Chart.yaml

---------

Co-authored-by: Miroslav Hadzhiev <miroslav.hadzhiev@gmail.com>